# src/controllers/ItemsController.js
@@ -1,39 +1,0 @@
-const Controller = require('./Controller');
-const service = require('../services/ItemsService');
-
-async function createItem(request, response) {
-  try {
-    const item = await Controller.handleRequest(request, response, service.createItem);
-    response
-      .status(201)
-      .location(`${request.originalUrl}/${item._id}`)
-      .json(item);
-  } catch (e) {
-    response.status(e.status).json(e);
-  }
-};
-
-async function getItem(request, response) {
-  try {
-    logger.info(`ItemsController.getItem() called`);
-    const item = await Controller.handleRequest(request, response, service.getItem);
-    response.status(200).json(item);
-  } catch (e) {
-    response.status(e.status).json(e);
-  }
-};
-
-async function listItems(request, response) {
-  try {
-    const items = await Controller.handleRequest(request, response, service.listItems);
-    response.status(200).json(items);
-  } catch (e) {
-    response.status(e.status).json(e);
-  }
-};
-
-module.exports = {
-  createItem,
-  getItem,
-  listItems,
-};
